feat(bvh): 优化BVH实现并添加光线投射演示示例
重构BVH核心算法，优化向量计算性能
添加BVH光线投射演示场景及完整文档
修复BVH构建过程中的边界条件处理
更新相关文档和类型定义

--- a/examples/package.json
+++ b/examples/package.json
@@ -22,7 +22,8 @@
     "@galacean/engine-shader": "workspace:*",
     "@galacean/engine-shaderlab": "workspace:*",
     "@galacean/engine-toolkit": "latest",
-    "@galacean/engine-ui": "workspace:*"
+    "@galacean/engine-ui": "workspace:*",
+    "@galacean/engine-bvh": "workspace:*"
   },
   "devDependencies": {
     "dat.gui": "^0.7.9",
